--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -20,6 +20,6 @@ std = [
     "fixed-hash/std",
     "primitive-types/std",
 ]
-
+impl-rustc-hex = ["primitive-types/rustc-hex", "fixed-hash/rustc-hex"]
 impl-serde = ["std", "primitive-types/serde"]
 impl-rlp = ["std", "primitive-types/rlp"]
