--- a/base58/Cargo.toml
+++ b/base58/Cargo.toml
@@ -10,10 +10,10 @@ description = "Tiny and fast base58 encoding"
 edition = "2018"
 
 [dependencies]
-rstd = { path = "../rstd", default-features = false }
+ustd = { path = "../ustd", default-features = false }
 
 [features]
 default = ["std"]
 std = [
-    "rstd/std"
+    "ustd/std",
 ]
