--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -5,18 +5,18 @@ authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.c
 edition = "2018"
 
 [dependencies]
-rstd = { path = "../rstd", default-features = false }
+ustd = { path = "../ustd", default-features = false }
 primitives = { path = "../primitives", default-features = false }
-bitcrypto = { path = "../crypto", default-features = false }
+crypto = { path = "../crypto", default-features = false }
 serialization = { path = "../serialization", default-features = false }
 rustc-hex = { version = "2", default-features = false }
 
 [features]
 default = ["std"]
 std = [
-    "rstd/std",
+    "ustd/std",
     "primitives/std",
-    "bitcrypto/std",
+    "crypto/std",
     "serialization/std",
-    "rustc-hex/std"
+    "rustc-hex/std",
 ]
