--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.c
 edition = "2018"
 
 [dependencies]
-rstd = { path = "../rstd", default-features = false }
+ustd = { path = "../ustd", default-features = false }
 primitives = { path = "../primitives", default-features = false }
-bitcrypto = { path = "../crypto", default-features = false }
+crypto = { path = "../crypto", default-features = false }
 base58 = { path = "../base58", default-features = false }
 rustc-hex = { version = "2", default-features = false }
 libsecp256k1 = "0.2.2"  # support `no_std`
@@ -15,9 +15,9 @@ libsecp256k1 = "0.2.2"  # support `no_std`
 [features]
 default = ["std"]
 std = [
-    "rstd/std",
+    "ustd/std",
     "primitives/std",
-    "bitcrypto/std",
+    "crypto/std",
     "base58/std",
-    "rustc-hex/std"
+    "rustc-hex/std",
 ]
