--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.c
 edition = "2018"
 
 [dependencies]
-rstd = { path = "../rstd", default-features = false }
+ustd = { path = "../ustd", default-features = false }
 primitives = { path = "../primitives", default-features = false }
-bitcrypto = { path = "../crypto", default-features = false }
+crypto = { path = "../crypto", default-features = false }
 serialization = { path = "../serialization", default-features = false }
 keys = { path = "../keys", default-features = false }
 chain = { path = "../chain", default-features = false }
@@ -18,10 +18,10 @@ rustc-hex = { version = "2.0", default-features = false }
 [features]
 default = ["std"]
 std = [
-    "rstd/std",
+    "ustd/std",
     "primitives/std",
-    "bitcrypto/std",
+    "crypto/std",
     "serialization/std",
     "keys/std",
-    "chain/std"
+    "chain/std",
 ]
