--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -5,19 +5,19 @@ authors = ["debris <marek.kotewicz@gmail.com> and koushiro <koushiro.cqx@gmail.c
 edition = "2018"
 
 [dependencies]
-ustd = { path = "../ustd", default-features = false }
+ustd = { git = "https://github.com/chainx-org/chainx-common", default-features = false }
+base58 = { git = "https://github.com/chainx-org/chainx-common", default-features = false }
 primitives = { path = "../primitives", default-features = false }
 crypto = { path = "../crypto", default-features = false }
-base58 = { path = "../base58", default-features = false }
-rustc-hex = { version = "2", default-features = false }
+rustc-hex = { version = "2.0", default-features = false }
 libsecp256k1 = "0.2.2"  # support `no_std`
 
 [features]
 default = ["std"]
 std = [
     "ustd/std",
+    "base58/std",
     "primitives/std",
     "crypto/std",
-    "base58/std",
     "rustc-hex/std",
 ]
