--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -11,6 +11,9 @@ rustc-hex = { version = "2.0", default-features = false }
 fixed-hash = { version = "0.3", default-features = false }
 primitive-types = { version = "0.2", default-features = false, features = ["codec"] }
 
+serde = { version = "1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
+
 [features]
 default = ["std"]
 std = [
@@ -19,7 +22,9 @@ std = [
     "rustc-hex/std",
     "fixed-hash/std",
     "primitive-types/std",
+
+    "serde",
+    "serde_derive",
 ]
 impl-rustc-hex = ["primitive-types/rustc-hex", "fixed-hash/rustc-hex"]
 impl-serde = ["std", "primitive-types/serde"]
-impl-rlp = ["std", "primitive-types/rlp"]
