--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,11 @@ authors = ["Parity Technologies <admin@parity.io> and koushiro <koushiro.cqx@gma
 description = "A light bitcoin library inherited from parity-bitcoin, with `no_std` support."
 edition = "2018"
 
-[dependencies]
-primitives = { path = "primitives" }
-serialization = { path = "serialization" }
-crypto = { path = "crypto" }
-keys = { path = "keys" }
-chain = { path = "chain" }
-script = { path = "script" }
-merkle = { path = "merkle" }
-
 [workspace]
 members = [
     "primitives",
     "serialization",
+    "serialization_derive",
     "crypto",
     "keys",
     "chain",
