--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "light-bitcoin-keys"
 version = "0.2.0"
-authors = ["ChainX <https://github.com/chainx-org>"]
+authors = ["The ChainX Authors"]
 edition = "2018"
 license = "GPL-3.0"
 
 [features]
 default = ["std"]
 std = [
-  "rustc-hex/std",
-  "libsecp256k1/std",
+  "bs58/std",
   "codec/std",
+  "hex/std",
+  "libsecp256k1/std",
   "serde",
 
   "light-bitcoin-crypto/std",
@@ -20,14 +21,11 @@ std = [
 
 [dependencies]
 bs58 = { version = "0.3", default-features = false, features = ["alloc"] }
-libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
-rustc-hex = { version = "2.0", default-features = false }
 codec = { package = "parity-scale-codec", version = "1.3",  default-features = false, features = ["derive"] }
+hex = { version = "0.4", default-features = false }
+libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 light-bitcoin-crypto = { path = "../crypto", default-features = false }
 light-bitcoin-primitives = { path = "../primitives", default-features = false }
 light-bitcoin-serialization = { path = "../serialization", default-features = false, features = ["derive"] }
-
-[dev-dependencies]
-hex-literal = "0.3"
