--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "light-bitcoin-primitives"
 version = "0.2.0"
-authors = ["ChainX <https://github.com/chainx-org>"]
+authors = ["The ChainX Authors"]
 edition = "2018"
 license = "GPL-3.0"
 
@@ -9,9 +9,8 @@ license = "GPL-3.0"
 default = ["std"]
 std = [
   "byteorder/std",
-  "rustc-hex/std",
-  "hex/std",
   "fixed-hash/std",
+  "hex/std",
   "serde",
 
   "impl-serde",
@@ -24,7 +23,6 @@ std = [
 byteorder = { version = "1.3", default-features = false }
 fixed-hash = { version = "0.6", default-features = false }
 hex = { version = "0.4", default-features = false }
-rustc-hex = { version = "2.0", default-features = false }
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 impl-serde = { version = "0.3", optional = true }
