--- a/wasm-test/Cargo.toml
+++ b/wasm-test/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "light-bitcoin-wasm-test"
 version = "0.1.0"
-authors = ["ChainX <https://github.com/chainx-org>"]
+authors = ["The ChainX Authors"]
 edition = "2018"
+license = "GPL-3.0"
 
 [features]
 std = ["light-bitcoin/std"]
