--- a/schnorr/Cargo.toml
+++ b/schnorr/Cargo.toml
@@ -8,10 +8,12 @@ license = "GPL-3.0"
 [features]
 default = ["std"]
 std = [
-    "libsecp256k1/std"
+    "libsecp256k1/std",
+    "hex/std"
 ]
 
 [dependencies]
 libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
 digest = { version = "0.9.0", default-features = false }
 sha2 = { version = "0.9.5", default-features = false }
+hex = { version = "0.4", default-features = false }
