--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -9,6 +9,7 @@ license = "GPL-3.0"
 default = ["std"]
 std = [
   "hex/std",
+  "sha2/std",
 
   "light-bitcoin-chain/std",
   "light-bitcoin-crypto/std",
@@ -19,6 +20,7 @@ std = [
 
 [dependencies]
 hex = { version = "0.4", default-features = false }
+sha2 = { version = "0.9.5", default-features = false }
 
 light-bitcoin-chain = { path = "../chain", default-features = false }
 light-bitcoin-crypto = { path = "../crypto", default-features = false }
