--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -23,7 +23,7 @@ std = [
 [dependencies]
 bs58 = { version = "0.4", default-features = false, features = ["alloc"] }
 codec = { package = "parity-scale-codec", version = "1.3",  default-features = false, features = ["derive"] }
-hex = { version = "0.4", default-features = false }
+hex = { version = "0.4", default-features = false, features = ["alloc"] }
 libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
 digest = { version = "0.9.0", default-features = false }
