--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -25,6 +25,7 @@ bs58 = { version = "0.4", default-features = false, features = ["alloc"] }
 codec = { package = "parity-scale-codec", version = "1.3",  default-features = false, features = ["derive"] }
 hex = { version = "0.4", default-features = false, features = ["alloc"] }
 libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
+musig2 = { git = "https://github.com/chainx-org/Musig2", branch = "lib", default-features = false }
 serde = { version = "1.0", features = ["derive"], optional = true }
 digest = { version = "0.9.0", default-features = false }
 sha2 = { version = "0.9.5", default-features = false }
