--- a/mast/Cargo.toml
+++ b/mast/Cargo.toml
@@ -9,6 +9,7 @@ license = "GPL-3.0"
 arrayref = { version = "0.3.6", default-features = false }
 core2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
 digest = { version = "0.9.0", default-features = false }
+rayon = "1.5.1"
 sha2 = { version = "0.9.5", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 bitcoin_hashes = { version = "0.10.0", default-features = false, features = ["alloc"] }
