--- a/mast/Cargo.toml
+++ b/mast/Cargo.toml
@@ -9,7 +9,7 @@ license = "GPL-3.0"
 arrayref = { version = "0.3.6", default-features = false }
 core2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
 digest = { version = "0.9.0", default-features = false }
-rayon = "1.5.0"
+rayon = { version = "1.5.0", optional = true }
 sha2 = { version = "0.9.5", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 bitcoin_hashes = { version = "0.10.0", default-features = false, features = ["alloc"] }
@@ -24,6 +24,7 @@ light-bitcoin-serialization = { path = "../serialization", default-features = fa
 [features]
 default = ['std']
 std = [
+    "rayon",
     "core2/std",
     "digest/std",
     "sha2/std",
