--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -21,6 +21,7 @@ std = [
 ]
 
 [dependencies]
+arrayref = { version = "0.3.6" }
 bs58 = { version = "0.4", default-features = false, features = ["alloc"] }
 codec = { package = "parity-scale-codec", version = "1.3",  default-features = false, features = ["derive"] }
 hex = { version = "0.4", default-features = false, features = ["alloc"] }
