--- a/mast/Cargo.toml
+++ b/mast/Cargo.toml
@@ -10,12 +10,13 @@ arrayref = { version = "0.3.6", default-features = false }
 core2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
 digest = { version = "0.9.0", default-features = false }
 rayon = { version = "1.5.0", optional = true }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 sha2 = { version = "0.9.5", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 bitcoin_hashes = { version = "0.10.0", default-features = false, features = ["alloc"] }
 
 bitcoin-bech32 = { git = "https://github.com/chainx-org/rust-bech32-bitcoin", branch = "master", default-features = false }
-musig2 = { git = "https://github.com/chainx-org/Musig2", branch = "lib", default-features = false }
+musig2 = { git = "https://github.com/chainx-org/Musig2", branch = "scale-info", default-features = false }
 
 light-bitcoin-keys = { path = "../keys", default-features = false }
 light-bitcoin-script = { path = "../script", default-features = false }
