--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -22,7 +22,7 @@ std = [
 [dependencies]
 hex = { version = "0.4", default-features = false }
 sha2 = { version = "0.9.5", default-features = false }
-libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
+libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1.git", default-features = false, features = ["hmac", "static-context"] }
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
 light-bitcoin-chain = { path = "../chain", default-features = false }
