--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -9,6 +9,7 @@ license = "GPL-3.0"
 default = ["std"]
 std = [
   "byteorder/std",
+  "codec/std",
   "fixed-hash/std",
   "hex/std",
   "serde",
@@ -21,6 +22,7 @@ std = [
 
 [dependencies]
 byteorder = { version = "1.3", default-features = false }
+codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
 fixed-hash = { version = "0.7", default-features = false }
 hex = { version = "0.4", default-features = false}
 serde = { version = "1.0", features = ["derive"], optional = true }
