--- a/merkle/Cargo.toml
+++ b/merkle/Cargo.toml
@@ -17,7 +17,7 @@ std = [
 ]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
+codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
 
