--- a/mast/Cargo.toml
+++ b/mast/Cargo.toml
@@ -2,22 +2,22 @@
 name = "light-bitcoin-mast"
 version = "0.2.0"
 authors = ['The ChainX Authors']
-edition = "2018"
+edition = "2021"
 license = "GPL-3.0"
 
 [dependencies]
 arrayref = { version = "0.3.6", default-features = false }
-codec = { package = "parity-scale-codec", version = "2.3.1",  default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0",  default-features = false, features = ["derive"] }
 core2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
 digest = { version = "0.9.0", default-features = false }
 rayon = { version = "1.5.0", optional = true }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
 sha2 = { version = "0.9.5", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 bitcoin_hashes = { version = "0.10.0", default-features = false, features = ["alloc"] }
 
 bitcoin-bech32 = { git = "https://github.com/chainx-org/rust-bech32-bitcoin", branch = "master", default-features = false }
-musig2 = { git = "https://github.com/chainx-org/Musig2", branch = "lib", default-features = false }
+musig2 = { git = "https://github.com/chainx-org/Musig2", branch = "upgrade-2021", default-features = false }
 
 light-bitcoin-keys = { path = "../keys", default-features = false }
 light-bitcoin-script = { path = "../script", default-features = false }
