Remove musig2 of mast

--- a/mast/Cargo.toml
+++ b/mast/Cargo.toml
@@ -7,21 +7,25 @@ license = "GPL-3.0"
 
 [dependencies]
 arrayref = { version = "0.3.6", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.0.0",  default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
 core2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
 digest = { version = "0.9.0", default-features = false }
 rayon = { version = "1.5.0", optional = true }
+rand_core = { version = "0.6.3", default-features = false }
 scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
 sha2 = { version = "0.9.5", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 bitcoin_hashes = { version = "0.10.0", default-features = false, features = ["alloc"] }
 
 bitcoin-bech32 = { git = "https://github.com/chainx-org/rust-bech32-bitcoin", branch = "master", default-features = false }
-musig2 = { git = "https://github.com/chainx-org/Musig2", branch = "upgrade-2021", default-features = false }
+
+libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1", branch = "upgrade-2021", default-features = false, features = ["hmac", "static-context"] }
 
 light-bitcoin-keys = { path = "../keys", default-features = false }
 light-bitcoin-script = { path = "../script", default-features = false }
 light-bitcoin-serialization = { path = "../serialization", default-features = false }
+lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
 
 [dev-dependencies]
 criterion = { version = "0.3", default-features = false, features = ['html_reports', 'cargo_bench_support'] }
@@ -33,10 +37,12 @@ std = [
     "core2/std",
     "codec/std",
     "digest/std",
+    "rand_core/std",
+    "serde",
     "sha2/std",
     "hex/std",
     "bitcoin_hashes/std",
-    "musig2/std",
+    "libsecp256k1/std",
     "light-bitcoin-keys/std",
     "light-bitcoin-script/std",
     "light-bitcoin-serialization/std",
