--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -28,7 +28,7 @@ bs58 = { version = "0.4", default-features = false, features = ["alloc"] }
 codec = { package = "parity-scale-codec", version = "3.0.0",  default-features = false, features = ["derive"] }
 digest = { version = "0.9.0", default-features = false }
 hex = { version = "0.4", default-features = false, features = ["alloc"] }
-libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1.git", default-features = false, features = ["hmac", "static-context"] }
+libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1", branch = "develop-2022", default-features = false, features = ["hmac", "static-context"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
 scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
 sha2 = { version = "0.9.5", default-features = false }
