--- a/mast/Cargo.toml
+++ b/mast/Cargo.toml
@@ -20,7 +20,7 @@ bitcoin_hashes = { version = "0.10.0", default-features = false, features = ["al
 
 bitcoin-bech32 = { git = "https://github.com/chainx-org/rust-bech32-bitcoin", branch = "master", default-features = false }
 
-libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1", branch = "upgrade-2021", default-features = false, features = ["hmac", "static-context"] }
+libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1", branch = "develop-2022", default-features = false, features = ["hmac", "static-context"] }
 
 light-bitcoin-keys = { path = "../keys", default-features = false }
 light-bitcoin-script = { path = "../script", default-features = false }
