--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -24,7 +24,7 @@ std = [
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
 hex = { version = "0.4", default-features = false }
 sha2 = { version = "0.9.5", default-features = false }
-libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1.git", default-features = false, features = ["hmac", "static-context"] }
+libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1", branch = "develop-2022", default-features = false, features = ["hmac", "static-context"] }
 scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
 
 light-bitcoin-chain = { path = "../chain", default-features = false }
