--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -22,12 +22,12 @@ std = [
 
 [dependencies]
 byteorder = { version = "1.3", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-fixed-hash = { version = "0.7", default-features = false }
+codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
+fixed-hash = { version = "0.8", default-features = false }
 hex = { version = "0.4", default-features = false}
 serde = { version = "1.0", features = ["derive"], optional = true }
-scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
+scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
 
-impl-serde = { version = "0.3.1", optional = true }
+impl-serde = { version = "0.4.0", optional = true }
 impl-codec = { version = "0.6.0", default-features = false }
-primitive-types = { version = "0.11.1", default-features = false, features = ["codec", "scale-info"] }
+primitive-types = { version = "0.12.2", default-features = false, features = ["codec", "scale-info", "num-traits"] }
