--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -10,7 +10,7 @@ default = ["std"]
 std = [
   "codec/std",
   "hex/std",
-  "serde",
+  "serde/std",
   "scale-info/std",
 
   "light-bitcoin-crypto/std",
@@ -21,7 +21,7 @@ std = [
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
 hex = { version = "0.4", default-features = false }
-serde = { version = "1.0", features = ["derive"], optional = true }
+serde = { version = "1.0", default-features = false, features = ["derive"]}
 scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
 
 light-bitcoin-crypto = { path = "../crypto", default-features = false }
