--- a/keys/Cargo.toml
+++ b/keys/Cargo.toml
@@ -13,7 +13,7 @@ std = [
   "digest/std",
   "hex/std",
   "libsecp256k1/std",
-  "serde",
+  "serde/std",
   "scale-info/std",
   "sha2/std",
 
@@ -29,7 +29,7 @@ codec = { package = "parity-scale-codec", version = "3.6.5",  default-features =
 digest = { version = "0.9.0", default-features = false }
 hex = { version = "0.4", default-features = false, features = ["alloc"] }
 libsecp256k1 = { git = "https://github.com/chainx-org/libsecp256k1", branch = "develop-2022", default-features = false, features = ["hmac", "static-context"] }
-serde = { version = "1.0", features = ["derive"], optional = true }
+serde = { version = "1.0", default-features = false, features = ["derive"]}
 scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
 sha2 = { version = "0.9.5", default-features = false }
 # for no-std
