--- a/mast/Cargo.toml
+++ b/mast/Cargo.toml
@@ -13,7 +13,7 @@ digest = { version = "0.9.0", default-features = false }
 rayon = { version = "1.5.0", optional = true }
 rand_core = { version = "0.6.3", default-features = false }
 scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
-serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 sha2 = { version = "0.9.5", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 bitcoin_hashes = { version = "0.10.0", default-features = false, features = ["alloc"] }
@@ -39,7 +39,7 @@ std = [
     "codec/std",
     "digest/std",
     "rand_core/std",
-    "serde",
+    "serde/std",
     "sha2/std",
     "hex/std",
     "bitcoin_hashes/std",
