--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -12,9 +12,9 @@ std = [
   "codec/std",
   "fixed-hash/std",
   "hex/std",
-  "serde",
+  "serde/std",
   "scale-info/std",
-  "impl-serde",
+  "impl-serde/std",
   "impl-codec/std",
   "primitive-types/std",
   "primitive-types/serde",
@@ -25,9 +25,9 @@ byteorder = { version = "1.3", default-features = false }
 codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
 fixed-hash = { version = "0.8", default-features = false }
 hex = { version = "0.4", default-features = false}
-serde = { version = "1.0", features = ["derive"], optional = true }
+serde = { version = "1.0", default-features = false, features = ["derive"] }
 scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
 
-impl-serde = { version = "0.4.0", optional = true }
+impl-serde = { version = "0.4.0", default-features = false }
 impl-codec = { version = "0.6.0", default-features = false }
 primitive-types = { version = "0.12.2", default-features = false, features = ["codec", "scale-info", "num-traits"] }
